# ml-switcheroo

./: .dockerignore  .editorconfig  .gitignore  .prettierrc  COVERAGE.md  EXTENDING.md  MAINTENANCE.md  MANIFEST.in  Makefile  ONNX9000.md  README.md  delme.sh  make.bat  patch9.js  pyproject.toml  requirements.txt  test-requirements.txt  test_debug21.py  test_debug22.py  test_debug23.py  tmp_bonsai_modeling.py  tmp_generate_compliance2.py  universal_mapping.json
.github/workflows/: release.yml  test_and_release.yml  tests_release.yml
docs/: conf.py  generated_operations.yaml  index.md  operations.yaml  requirements.txt
maintenance/: sync_all.sh
scripts/: bootstrap.sh  build_docs.py  discover_missing_ops.py  generate_10k_plan.py  generate_odl_from_10k.py  migrate_test_rewriter.py  run_check.sh  run_migration.py  suggest_gen_llm_loop.sh
scripts/maintenance/: generate_overlays.py
src/ml_switcheroo/: __init__.py  __main__.py  config.py  enums.py
tests/: conftest.py  test_adapters.py  test_batch_runner.py  test_bruteforce.py  test_code_extractor.py  test_config_extra.py  test_config_extra2.py  test_config_extra_py310.py  test_dummy_plugins.py  test_dummy_plugins_transform.py  test_engine_fusion.py  test_engine_fusion_gap.py  test_frameworks_flax_nnx_gap.py  test_frameworks_jax_gap.py  test_frameworks_mlx_gap.py  test_frameworks_onnx9000_gap.py  test_fuzzer_constraints.py  test_fuzzer_dtypes.py  test_fuzzer_list_layout.py  test_harness_complex_types.py  test_harness_generator_live.py  test_hooks.py  test_hooks_context.py  test_hooks_gap.py  test_hooks_loader.py  test_import_errors.py  test_init_coverage.py  test_init_coverage2.py  test_init_coverage_3.py  test_init_gap.py  test_main_coverage.py  test_missing_plugins.py  test_plugin_coverage_gaps.py  test_plugin_loss_wrapper.py  test_plugin_others.py  test_plugin_padding.py  test_registry_sync.py  test_rewriter_alias_resolution.py  test_rewriter_bubbling.py  test_rewriter_class_structure.py  (+2 more)
tests/analysis/: test_audit.py  test_dependencies.py  test_lifecycle.py  test_purity.py  test_symbol_table.py
tests/cli/: test_audit_gap.py  test_audit_json.py  test_commands_extra.py  test_convert_gap.py  test_define_cmd.py  test_define_cmd_scaffold.py  test_define_coverage.py  test_define_coverage2.py  test_define_dry_run.py  test_define_error.py  test_define_full.py  test_define_import_error.py  test_dev_cmd.py  test_discovery_gap.py  test_learning_cmd.py  test_main_audit.py  test_main_coverage_extra.py  test_main_gap.py  test_matrix_cmd.py  test_meta_schema.py  test_snapshot_cmd.py  test_snapshots_gap.py  test_suggest.py  test_sync_cmd.py  test_sync_standards.py  test_verify_cmd.py  test_weight_script.py  test_wizard.py  test_wizard_gap.py  test_wizard_mapping.py
tests/codegen/: test_generator_constraints.py  test_generator_determinism.py  test_generator_flow.py  test_generator_grad.py  test_generator_jit.py  test_generator_paxml.py  test_generator_runtime.py  test_generator_shape.py  test_generator_template.py  test_generator_tolerances.py  test_generator_types.py  test_generator_verification_mode.py  test_generator_void_return.py  test_physical_gen.py  (+4 more)
tmp_plugins/: jax_decomposition.py
(+1196 files in other folders)
